# ChestXSim

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: .dockerignore  DockerFile  devcontainer.json
examples/: 0. Data_containers.ipynb  1. CT Readers.ipynb  2. Preprocessing.ipynb  3. Projection.ipynb  4. Reconstruction.ipynb  5. Pipeline.ipynb  6. Astra Wrapper.ipynb
examples/notebooks/: 0. Data_containers.ipynb  1. CT Readers.ipynb  2. Preprocessing.ipynb  3. Projection.ipynb  4. Reconstruction.ipynb  5. Pipeline.ipynb  5. Unified Pipeline.ipynb  6. Astra Wrapper.ipynb  prueba_dani.ipynb
materials/mac/: mac_bone.txt  mac_soft.txt  mac_water.txt
materials/models/: model_BedSeg_full_model.pt  model_fine_tune_vf_2.pt
materials/spectra/: spec50kVp.mat  spec60kVp.mat  spec80kVp.mat  spectr100kVp.mat  spectr110kVp.mat  spectr120kVp.mat  spectr50kVp.mat  spectr60kVp.mat  spectr70kVp.mat  spectr80kVp.mat  spectr90kVp.mat
midrc/: LICENSE  MIDRC_manifest.json  README.md  test.ipynb  unzip.py
settings/: DCT-ASTRA-POLYCHROMATIC.json  DCT-FUXSIM-NO-SPECTRUM.json  volumeRAD.json  volumeRAD_geom_FDK.json  volumeRAD_geom_SART.json  volumeRAD_mono_FDK.json  volumeRAD_poly_FDK.json  volumeRAD_poly_noisy_FDK.json
src/chestxsim/cli/: interpolate.py  run_simulation.py
src/chestxsim/core/: __init__.py  data_containers.py  device.py  geometries.py  pipeline.py
src/chestxsim/io/: __init__.py  paths.py  readers.py  save_manager.py
src/chestxsim/preprocessing/: __init__.py  functional.py  steps.py
src/chestxsim/projection/: __init__.py  functional.py  steps.py
src/chestxsim/reconstruction/: functional.py  steps.py
src/chestxsim/utility/: __init__.py  energy_computation.py  filters.py  interpolation.py  ops_utils.py  visualization.py
src/chestxsim/wrappers/: __init__.py  astra.py  astra_old.py  base.py  factory.py  fuxsim.py  raptor.py
