[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chestxsim"
version = "0.1.0"
description = "Digital Chest Tomosynthesis simulation toolkit"
authors = [ {name="BiiG research group at University Carlos III of Madrid (UC3M).", email="bhermosi@pa.uc3m.es" } ]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy<2",
  "scipy>=1.14.1",
  "matplotlib>=3.10.3",
  "pydicom>=3.0.1",
  "scikit-image>=0.21.0",
  "cupy-cuda12x>=13.3.0",
  "ipykernel>=6.0.0",
  # ASTRA: pip wheels OK on Linux/macOS; Windows users should use conda-forge
  "astra-toolbox>=2.3; platform_system != 'Windows'",
  "fastai==2.7.17"
]

[project.scripts]
run_simulation = "chestxsim.cli.run_simulation:main"
rename = "chestxsim.cli.rename:main"
interpolate = "chestxsim.cli.interpolate:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
